<resources>
    <string name="app_name" translatable="false">Investwell</string>
    <string name="user_choice_for_login">I\'m registered user. Login &amp; view Portfolio. </string>
    <string name="facebook_app_id" translatable="false">634311953985647</string>
    <string name="app_language_english" translatable="false">English</string>
    <string name="app_language_bengali" translatable="false">Bengali</string>
    <string name="app_language_gujrati" translatable="false">Gujarati</string>
    <string name="app_language_hindi" translatable="false">Hindi</string>
    <string name="app_language_kannada" translatable="false">Kannada</string>
    <string name="app_language_marathi" translatable="false">Marathi</string>
    <string name="app_language_tamil" translatable="false">Tamil</string>
    <string name="app_language_telgu" translatable="false">Telugu</string>
    <string name="app_language_english_inverse" translatable="false">English</string>
    <string name="app_language_gujrati_inverse" translatable="false">ગુજરાતી</string>
    <string name="app_language_bengali_inverse" translatable="false">বাংলা</string>
    <string name="app_language_hindi_inverse" translatable="false">हिंदी</string>
    <string name="app_language_kannada_inverse" translatable="false">ಕನ್ನಡ</string>
    <string name="app_language_marathi_inverse" translatable="false">मराठी</string>
    <string name="app_language_tamil_inverse" translatable="false">தமிழ்</string>
    <string name="app_language_telgu_inverse" translatable="false">తెలుగు</string>
    <string name="order_auth_message" translatable="false">Order Authentication Required. if already done. Please \'Refresh\' or \'Delete\' to process further</string>
    <string name="dialog_no_mandate_header_txt">Required AutoPay</string>
    <string name="dialog_no_mandate_mini_header_txt">Create an AutoPay Mandate</string>
    <string name="dialog_no_mandate_btn_cancel_txt">Cancel</string>
    <string name="dialog_no_mandate_btn_proceed_txt">Proceed</string>
    <string name="dialog_title_permission_denied">Permission Denied</string>
    <string name="dialog_permission_denied_message_for_RM">You don\'t have permission to transact. </string>
    <string name="alert_dialog_header_txt">Alert</string>
    <string name="alert_dialog_notification_header_txt">Notification</string>
    <string name="alert_dialog_order_placed_sucess_txt">Success</string>
    <string name="alert_dialog_error_txt">Error</string>
    <string name="alert_dialog_notify_desc_txt">Do you want to receive notification? If Yes, Please enable on next screen.</string>
    <string name="alert_dialog_confirmation_header_txt">Confirmation</string>
    <string name="alert_dialog_btn_no_txt">No</string>
    <string name="alert_dialog_yes_btn_txt">Yes</string>
    <string name="alert_dialog_later_txt" translatable="false">Later</string>
    <string name="alert_dialog_continue_txt" translatable="false">Continue</string>
    <string name="alert_dialog_btn_txt">OK</string>
    <string name="alert_dialog_pin_reset" translatable="false">Do you really want to reset?</string>
    <string name="alert_dialog_logout_desc_txt">You will have to enter your security lock when you relaunch the app</string>
    <string name="alert_dialog_delete_scheme_txt">Do you really want to delete?</string>
    <string name="alert_dialog_delete_goal_txt">Do you really want to delete this Goal ?</string>
    <string name="alert_dialog_no_risk_profile_txt" translatable="false">Risk Profile is required before making Goal, Please Process. </string>
    <string name="alert_dialog_no_risk_profile_txt2" translatable="false">Before investment, you are required to complete your Risk Profile. Please Process. </string>
    <string name="toolBar_title_factsheet">Factsheet</string>
    <string name="toolBar_title_select_scheme">Select Scheme to Invest</string>
    <string name="toolBar_title_my_cart">My Cart</string>
    <string name="toolBar_title_nfo">New Fund Offers</string>
    <string name="toolBar_title_goal">Goal i want to achieve</string>
    <string name="toolBar_title_marriage_cal">Marriage Calculator</string>
    <string name="toolBar_title_education_cal">Education Calculator</string>
    <string name="toolBar_title_sip_cal">SIP Calculator</string>
    <string name="toolBar_title_lumpsum_cal">Lumpsum Calculator</string>
    <string name="toolBar_title_delay_sip_cal">Cost Of Delay SIP</string>
    <string name="toolBar_title_retirement_cal">Retirement Calculator</string>
    <string name="toolBar_title_my_journey_so_far">My Journey so far</string>
    <string name="toolBar_title_invest_now">Invest Now</string>
    <string name="toolBar_title_my_insurance">Insurance</string>
    <string name="toolBar_title_transfer_holding">Transfer Holding</string>
    <string name="toolBar_title_notifications">Notifications</string>
    <string name="toolBar_title_recomended_schemes">Recommended Schemes</string>
    <string name="toolBar_title_goal_schemes">Goal Based Schemes</string>
    <string name="toolBar_title_personal_details_form">Personal Details</string>
    <string name="toolBar_title_fatca_details_form">FATCA Details</string>
    <string name="toolBar_title_nominee_details_form">Nominee Details</string>
    <string name="toolBar_title_bank_details_form">Bank Details</string>
    <string name="toolBar_title_address_details_form">Address Details</string>
    <string name="toolBar_title_scheme_details">Scheme Details</string>
    <string name="toolBar_title_portfolio_details">Portfolio Details</string>
    <string name="toolBar_title_folio_transactions">Folio Transactions</string>
    <string name="toolBar_title_outstanding_units">Outstanding Units</string>
    <string name="toolBar_title_swp">SWP</string>
    <string name="toolBar_title_sip">SIP</string>
    <string name="toolBar_title_stp">STP</string>
    <string name="toolBar_title_switch">SWITCH</string>
    <string name="toolBar_title_add_purchase">Additional Purchase</string>
    <string name="toolBar_title_redeem">Redeem</string>
    <string name="toolBar_title_change_password">Change Password</string>
    <string name="toolBar_title_start_assesment">Start Assessment</string>
    <string name="toolBar_title_risk_profile_start" translatable="false">Risk Profile</string>
    <string name="toolBar_title_assesment_result" translatable="false">Assessment Result</string>
    <string name="toolBar_title_setting">Settings</string>
    <string name="main_nav_title_journey">My Journey So Far</string>
    <string name="main_nav_title_send_mail">Send Mail</string>
    <string name="main_nav_title_watch_list">Watch List</string>
    <string name="main_nav_title_invest">Invest Now</string>
    <string name="main_nav_title_dividend">Dividend</string>
    <string name="main_nav_title_my_insurance">My Insurance</string>
    <string name="main_nav_title_tax_saving">Tax Saving</string>
    <string name="main_nav_title_my_folio">My Folio</string>
    <string name="main_nav_title_sys_invest">My SIP</string>
    <string name="main_nav_title_my_sip">My SIP</string>
    <string name="main_title_sip_cease" translatable="false">SIP CEASE</string>
    <string name="main_bottom_tab_menu_dashboard">Dashboard</string>
    <string name="main_bottom_tab_menu_portfolio">Portfolio</string>
    <string name="main_bottom_tab_menu_transactions">Transactions</string>
    <string name="main_bottom_tab_menu_profile">Profile</string>
    <string name="main_bottom_tab_menu_search">Client Search</string>
    <string name="main_bottom_tab_menu_more">More</string>
    <string name="bottomsheet_hello_txt">Hello</string>
    <string name="main_nav_title_my_orders">My Orders</string>
    <string name="main_nav_title_mandate_list">Autopay Mandate List</string>
    <string name="main_nav_title_fatca_creation">FATCA Creation</string>
    <string name="main_nav_title_profile_detail">Profile Detail</string>
    <string name="main_nav_title_my_folio_schemes">Folio Details</string>
    <string name="main_nav_title_dividend_detail">Dividend Detail</string>
    <string name="main_nav_title_my_risk_profile">Risk Profile</string>
    <string name="main_nav_title_choose_your_goal">Choose your Financial Purpose</string>
    <string name="main_nav_title_holding">Transfer Holding</string>
    <string name="main_nav_title_invest_profile">Investment Profiles</string>
    <string name="pin_text_default_screen_lock">Use your screen lock</string>
    <string name="pin_text_default_screen_lock_details">Protect this app by using your existing phone screen lock</string>
    <string name="pin_text_Create_PIN">Create PIN</string>
    <string name="pin_text_Create_PIN_Details">Create a 4-digit PIN.You\'ll need to  remember this pin at the time of login</string>
    <string name="pin_text_SKIP">Skip</string>
    <string name="pin_text_KIP_Details">I would like to skip extra app security screen lock and i wish to login by username and password </string>
    <string name="pin_text_App_Security">Secure your App</string>
    <string name="pin_text_Change_PIN">Change PIN</string>
    <string name="pin_text_Change_PIN_Details">Change your PIN. You\'ll need to be remember this pin at the time of login</string>
    <string name="pin_pattern_next_btn_txt">Next</string>
    <string name="pin_pattern_forgot_txt">Forgot?</string>
    <string name="pin_pattern_header_txt">Use PIN or Finger Touch</string>
    <string name="pin_pattern_1_no_txt">1</string>
    <string name="pin_pattern_2_no_txt">2</string>
    <string name="pin_pattern_3_no_txt">3</string>
    <string name="pin_pattern_4_no_txt">4</string>
    <string name="pin_pattern_5_no_txt">5</string>
    <string name="pin_pattern_6_no_txt">6</string>
    <string name="pin_pattern_7_no_txt">7</string>
    <string name="pin_pattern_8_no_txt">8</string>
    <string name="pin_pattern_9_no_txt">9</string>
    <string name="pin_pattern_0_no_txt">0</string>
    <string name="pin_pattern_reset_btn_txt">Reset</string>
    <string name="help_main_screen_title">Contact us</string>
    <string name="help_contact_us_title">Contact Information</string>
    <string name="help_faq_title">FAQs</string>
    <string name="help_more_title">More</string>
    <string name="help_text_privacy_policy">Privacy Policy</string>
    <string name="help_text_terms_conditions">Terms &amp; Conditions</string>
    <string name="help_text_Disclaimers">Testimonials</string>
    <string name="help_next_installment_date">Help - Next Installment Date</string>
    <string name="help_call_txt">Call</string>
    <string name="help_txt_23432">23432</string>
    <string name="personal_details_btn_continue_txt">Continue</string>
    <string name="rate_our_app" translatable="false">Rate our App</string>
    <string name="rate_it_now" translatable="false">Rate It Now</string>
    <string name="reminder_me_later" translatable="false">Reminder Me Later</string>
    <string name="no_thanks" translatable="false">No, Thanks</string>
    <string name="review_message" translatable="false">If you love our app, Please take a moment to rate it on Play Store.\u0020</string>
    <string name="settigs_share_txt">Share</string>
    <string name="testing_view_check_nse_txt">Check NSE</string>
    <string name="testing_view_check_bse_txt">Check BSE</string>
    <string name="testing_view_check_live_txt">Check Live</string>
    <string name="testing_view_btn_check_txt">Check</string>
    <string name="social_media_whatsapp_txt">WhatsApp</string>
    <string name="social_media_twitter_txt">Twitter</string>
    <string name="social_media_facebook_txt">Facebook</string>
    <string name="social_media_linkedin_txt">LinkedIn</string>
    <string name="social_media_youtube_txt">Youtube</string>
    <string name="payment_success_header_txt">Awesome, Payment was successful</string>
    <string name="payment_success_desc_txt">Thank you</string>
    <string name="payment_success_footer_btn_txt">Continue</string>
</resources>