<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivIcon"
        android:src="@mipmap/payment_sucess"
        android:contentDescription="@string/app_name" />


    <investwell.utils.customView.CustomTextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMessage"
        android:layout_marginTop="25dp"
        android:text="@string/payment_success_header_txt"
        android:textStyle="bold"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/textView_all_size_16"/>


    <investwell.utils.customView.CustomTextViewRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSubMessage"
        android:layout_marginTop="10dp"
        android:text="@string/payment_success_desc_txt"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/textView_all_size_14"/>



    <investwell.utils.customView.CustomButton
        android:layout_width="@dimen/btn_width_footer"
        android:layout_height="@dimen/btn_height_footer"
        android:id="@+id/tvSubmit"
        android:textColor="?attr/primaryButtonTextColor"
        android:layout_marginTop="110dp"
        android:padding="5dp"
        android:background="?attr/primaryBtnDrawable"
        android:text="@string/payment_success_footer_btn_txt"
        android:textAlignment="center"
        android:textSize="@dimen/textView_all_size_14"/>

</LinearLayout>