<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:id="@+id/linerMain">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center">


        <investwell.utils.customView.CustomTextViewBold
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rate_our_app"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">


        <investwell.utils.customView.CustomTextViewRegular
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/review_message"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <investwell.utils.customView.CustomButton
            android:id="@+id/btRateNow"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/primaryButtonBackground"
            android:gravity="center"
            android:text="@string/rate_it_now"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            />

        <investwell.utils.customView.CustomButton
            android:id="@+id/btReminder"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/primaryButtonBackground"
            android:gravity="center"
            android:text="@string/reminder_me_later"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            />

        <investwell.utils.customView.CustomButton
            android:id="@+id/btNoThanks"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/primaryButtonBackground"
            android:gravity="center"
            android:text="@string/no_thanks"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>


</LinearLayout>